src/objects/Grant_Report_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <formula>Grant_Line_Item_ID__r.Category__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant_Amount_Spent__c</fullName>
        <description>Grant amount spent in the referenced grant line Item</description>
        <label>Grant Amount Spent</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Grant_Line_Item_ID__c</fullName>
        <label>Grant Line Item ID</label>
        <referenceTo>Grant_Line_Item__c</referenceTo>
        <relationshipLabel>Grant Report Line Items</relationshipLabel>
        <relationshipName>Grant_Report_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Grant_Report_ID__c</fullName>
        <label>Grant Report ID</label>
        <referenceTo>Grant_Report__c</referenceTo>
        <relationshipLabel>Grant Report Line Items</relationshipLabel>
        <relationshipName>Grant_Report_Line_Items</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Grant Report Line Item</label>
    <nameField>
        <label>Details Link</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Grant Report Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>